--- a/index.html
+++ b/index.html
@@ -2,3 +2,10 @@
 layout: home
 # Index page
 ---
+<script>
+  if (window.location.search.includes("fbclid")) {
+      let url = new URL(window.location);
+      url.searchParams.delete("fbclid");
+      window.history.replaceState({}, document.title, url.pathname);
+  }
+</script>
