--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ layout: home
   }
 </script>
 
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="d4eefea8-04ce-4650-b600-84aafa5b7e62" type="text/javascript" async></script>
+
+
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B28PRWTGRK"></script>
