--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: home
 # Index page
 ---
+
+<link rel="icon" type="image/png" href="images/favicon.png">
+
+
 <script>
   if (window.location.search.includes("fbclid")) {
       let url = new URL(window.location);
