--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 # Index page
 ---
 
-<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 
 <script>
