--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: home
 # Index page
 ---
 
-<link rel="icon" type="image/png" href="assets/images/favicon.png">
+<link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" type="image/x-icon">
+
 
 
 <script>
