--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: home
 # Index page
 ---
 
-<link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico" type="image/x-icon">
+<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico" type="image/x-icon">
 
 
 
